--- a/project/config/api.toml
+++ b/project/config/api.toml
@@ -3,18 +3,14 @@ openai_key = "sk-"
 openai_base = "https://api.openai.com/v1"
 
 [KIMI]
-kimi_key = "sk-aim2Q3eIJWAamc0elrBebq52RggkAr3iXiH9lJgvvR1inZtb"
+kimi_key = "sk-fDGsChYiGQjJsX6yLhuOU1i5SXjmobR4QJDPAbbSZUPztCQS"
 kimi_base = "https://api.moonshot.cn/v1"
 
 [DEEPSEEK]
-deepseek_key = "sk-f78ed78a29ca44b29665bc2fc37910a7"
-deepseek_base = "https://api.deepseek.com/"
+deepseek_key = "sk-62efc71a7b434438a56647a74439beb1"
+deepseek_base = "https://api.deepseek.com"
 
 [CHATGLM]
-chatglm_key = "ec2901789d57f15608ddbcc3858e834a.acOjIb85ijAsTJDT"
-chatglm_base = "https://open.bigmodel.cn/api/paas/v4/"
+chatglm_key = "e5abe90cbbc1231b7719bfcbbc2fe552.DMHUgId6Sv5Grh1e"
+chatglm_base = "https://open.bigmodel.cn/api/paas/v4/chat/completions"
 
-[LOCAL]
-api_key = ""
-base_url = ""
-model_name = ""
