--- a/project/config/generator.toml
+++ b/project/config/generator.toml
@@ -1,7 +1,7 @@
 [GENERATOR]
-generator_model = [ "moonshot-v1-8k", "glm-4-flash", "deepseek-chat",]
-main_areas = [ "女士", "化妆品",]
-needs = "给我写一份关于香奈儿香水的营销文案，要求突出产品优点，抓住女性顾客最关心的地方，哪怕是不懂香水的男性也能一眼看出它的魅力，让人看了就想买"
-key_words = "香味，魅力"
-character_style = [ "职场女性",]
-language_style = [ "专业", "有号召力", "温柔",]
+generator_model = [ "glm-4-flash", "deepseek-chat",]
+main_areas = [ "男士", "运动",]
+needs = "给我写一份欧文五代球鞋的营销文案，结合你的所有关于一款优秀球鞋的认知，展示这款产品的优势，让人听了就想买"
+key_words = "抓地力，抗扭转，穿感舒适"
+character_style = [ "运动员",]
+language_style = [ "专业", "有号召力", "平和",]
